--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     	const observer = lozad(); 
         observer.observe();
     </script>
+    <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101300867);</script>
+    <script async src="//static.getclicky.com/js"></script>
 </body>
 
 </html>
