--- a/404.html
+++ b/404.html
@@ -17,13 +17,28 @@
     <p class="powerby"><span>Powered&nbsp;by&nbsp;</span><a href="https://gohugo.io" 
         target="_blank" rel="noopener noreferrer">Hugo</a><span>&nbsp;&amp;&nbsp;</span><a href="https://themes.gohugo.io/hugo-notepadium/" 
         target="_blank" rel="noopener noreferrer">Notepadium</a></p></div>
-</section><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+</section><script src="/js/core.min.8ac4329a77dbbc8b263b50dc40786816b73ce00b20c47ec8acf5559fd132c474f300c18a3d1427cfdd4e8ee5d70bacba.js" integrity="sha384-isQymnfbvIsmO1DcQHhoFrc84AsgxH7IrPVVn9EyxHTzAMGKPRQnz91OjuXXC6y6"></script><script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
     <script type="text/javascript">
     	const observer = lozad(); 
         observer.observe();
     </script>
     <script>var clicky_site_ids = clicky_site_ids || []; clicky_site_ids.push(101300867);</script>
     <script async src="//static.getclicky.com/js"></script>
+    <script src="/assets/js/script.js"></script>
+    <script type="text/javascript" language="javascript">
+    var callback = function(result) {
+        if (result.isBot) {
+            alert("You are a fucking bot!");
+        }
+        else {
+            alert("Welcome user!");
+        }
+    };
+    var botDetector = new BotDetector({
+        timeout: 1000,
+        callback: callback
+    });
+</script>
 </body>
 
 </html>
